--- a/index.html
+++ b/index.html
@@ -2415,7 +2415,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '1.2.3'; // Altere este número para atualizar a versão
+    const APP_VERSION = '1.2.4'; // Altere este número para atualizar a versão
 
     // Sua configuração do Firebase
     const firebaseConfig = {
@@ -4453,8 +4453,10 @@ Transporte - R$ 5,00"></textarea></div>
             try {
                 stream = await navigator.mediaDevices.getUserMedia({ video: cameraType });
                 videoEl.srcObject = stream;
+                await videoEl.play(); // Garante que o vídeo comece a tocar
                 
-                await new Promise(resolve => { videoEl.onloadedmetadata = resolve; });
+                // Espera um ciclo de animação para garantir que o quadro seja renderizado
+                await new Promise(resolve => requestAnimationFrame(resolve));
                 
                 canvasEl.width = videoEl.videoWidth;
                 canvasEl.height = videoEl.videoHeight;
