--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>LOJA DO HUNTER - Celulares e Acessórios</title>
     
     <!-- Google Fonts - Poppins -->
@@ -242,10 +242,8 @@
             font-weight: 600;
             color: var(--white);
             text-decoration: none;
-            /* Efeito de Vidro Fosco */
+            /* Efeito de Vidro Otimizado (sem backdrop-filter) */
             background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 16px;
             transition: background 0.3s ease;
@@ -265,10 +263,8 @@
         .tool-item {
             display: flex;
             align-items: center;
-            /* Efeito de Vidro Fosco */
+            /* Efeito de Vidro Otimizado (sem backdrop-filter) */
             background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(10px);
-            -webkit-backdrop-filter: blur(10px);
             border: 1px solid rgba(255, 255, 255, 0.2);
             border-radius: 16px;
             padding: 0.75rem;
@@ -290,7 +286,8 @@
             align-items: center;
             justify-content: center;
             margin-right: 0.75rem;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+            /* Sombra otimizada */
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
         }
 
         .tool-item i {
@@ -2453,7 +2450,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '1.3.1'; // Altere este número para atualizar a versão
+    const APP_VERSION = '1.3.2'; // Altere este número para atualizar a versão
 
     // Sua configuração do Firebase
     const firebaseConfig = {
