--- a/index.html
+++ b/index.html
@@ -568,10 +568,14 @@
         }
 
         .collaborator-header {
-            padding: 1rem 1.5rem;
+            display: flex; /* Ativa o Flexbox */
+            align-items: center; /* Alinha verticalmente os itens no centro */
+            justify-content: center; /* Centraliza o título horizontalmente */
+            padding: 1.5rem 1rem; /* Aumenta o padding vertical para dar mais espaço */
             text-align: center;
             position: relative;
             border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+            min-height: 60px; /* Garante uma altura mínima */
         }
 
                 /* ================================================= */
@@ -632,22 +636,28 @@
             background-color: rgba(142, 68, 173, 1);
         }
         
-        #collaborator-name-display {
-            font-size: 1.5rem;
+        #collaborator-name-display,
+        .collaborator-header h2 { /* Aplica a regra a todos os títulos de cabeçalho */
+            font-size: 1.3rem; /* Levemente menor para caber melhor */
             font-weight: 700;
             color: var(--white);
+            /* Adiciona padding para não ficar sob o botão de voltar */
+            padding: 0 50px; 
+            flex-grow: 1; /* Permite que o título ocupe o espaço central */
         }
 
         .back-button {
-            position: absolute;
-            top: 50%;
-            left: 1.5rem;
-            transform: translateY(-50%);
+            position: absolute; /* Mantém a posição absoluta para ficar à esquerda */
+            left: 1rem; /* Alinha à esquerda com padding */
+            top: 50%; /* Centraliza verticalmente em relação ao header */
+            transform: translateY(-50%); /* Ajuste fino do alinhamento vertical */
             background: none;
             border: none;
             color: var(--white);
             font-size: 1rem;
             cursor: pointer;
+            padding: 0.5rem; /* Adiciona uma área de clique maior */
+            z-index: 10; /* Garante que fique acima de outros elementos se necessário */
         }
 
         .back-button i {
@@ -2455,7 +2465,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '1.3.2'; // Altere este número para atualizar a versão
+    const APP_VERSION = '1.3.4'; // Altere este número para atualizar a versão
 
     // Sua configuração do Firebase
     const firebaseConfig = {
