--- a/index.html
+++ b/index.html
@@ -160,9 +160,18 @@
         /* --- Estrutura Principal (Simula o Celular no PC) --- */
         .mobile-container {
             max-width: 450px;
-            width: 100%; /* Garante que o container ocupe a largura disponível */
+            width: 100%; 
             margin: 0 auto;
-            background-color: transparent; /* O fundo agora é o do body */
+            background-color: transparent;
+            display: flex; /* Adicionado */
+            flex-direction: column; /* Adicionado */
+            align-items: center; /* Adicionado */
+        }
+
+        /* Garante que o main e o header ocupem a largura correta */
+        .mobile-container > header,
+        .mobile-container > main {
+            width: 100%;
         }
         
         /* --- Cabeçalho --- */
@@ -1419,6 +1428,27 @@
             background-color: #c0392b;
         }
 
+        /* =================================================================== */
+        /* --- AJUSTES PARA TELAS PEQUENAS (RESPONSIVIDADE) --- */
+        /* =================================================================== */
+        
+        /* Aplica estas regras em telas com largura máxima de 360px */
+        @media (max-width: 360px) {
+            /* Força a grade de ferramentas a ter apenas uma coluna */
+            .tools-grid {
+                grid-template-columns: 1fr;
+            }
+
+            /* Ajusta o padding para dar mais espaço */
+            section {
+                padding: 1.5rem 0.75rem;
+            }
+
+            header {
+                padding: 1.25rem 0.75rem 0.75rem 0.75rem;
+            }
+        }
+
     </style>
 
 
@@ -2465,7 +2495,7 @@ Transporte - R$ 5,00"></textarea></div>
             <script>
     // --- VERSÃO DO APLICATIVO ---
                 //2805
-    const APP_VERSION = '1.3.4'; // Altere este número para atualizar a versão
+    const APP_VERSION = '1.3.5'; // Altere este número para atualizar a versão
 
     // Sua configuração do Firebase
     const firebaseConfig = {
